--- a/keyboardTest/index.html
+++ b/keyboardTest/index.html
@@ -10,41 +10,41 @@
 <body>
 
 	<div class="keys">
-		<div data-key="81" class="key"><kbd>Q</kbd><span class="sound">boom</span></div>
-		<div data-key="87" class="key"><kbd>W</kbd><span class="sound">snare</span></div>
-		<div data-key="69" class="key"><kbd>E</kbd><span class="sound">openhat</span></div>
-		<div data-key="82" class="key"><kbd>R</kbd><span class="sound">clap</span></div>
-		<div data-key="84" class="key"><kbd>T</kbd><span class="sound">kick</span></div>
-		<div data-key="89" class="key"><kbd>Y</kbd><span class="sound">boom</span></div>
-		<div data-key="85" class="key"><kbd>U</kbd><span class="sound">openhat</span></div>
-		<div data-key="73" class="key"><kbd>I</kbd><span class="sound">boom</span></div>
-		<div data-key="79" class="key"><kbd>O</kbd><span class="sound">snare</span></div>
-		<div data-key="80" class="key"><kbd>P</kbd><span class="sound">tink</span></div>
+		<div data-key="81" class="key"><kbd>Q</kbd></div>
+		<div data-key="87" class="key"><kbd>W</kbd></div>
+		<div data-key="69" class="key"><kbd>E</kbd></div>
+		<div data-key="82" class="key"><kbd>R</kbd></div>
+		<div data-key="84" class="key"><kbd>T</kbd></div>
+		<div data-key="89" class="key"><kbd>Y</kbd></div>
+		<div data-key="85" class="key"><kbd>U</kbd></div>
+		<div data-key="73" class="key"><kbd>I</kbd></div>
+		<div data-key="79" class="key"><kbd>O</kbd></div>
+		<div data-key="80" class="key"><kbd>P</kbd></div>
 
-		<div data-key="65" class="key"><kbd>A</kbd><span class="sound">clap</span></div>
-		<div data-key="83" class="key"><kbd>S</kbd><span class="sound">hihat</span></div>
-		<div data-key="68" class="key"><kbd>D</kbd><span class="sound">kick</span></div>
-		<div data-key="70" class="key"><kbd>F</kbd><span class="sound">ride</span></div>
-		<div data-key="71" class="key"><kbd>G</kbd><span class="sound">snare</span></div>
-		<div data-key="72" class="key"><kbd>H</kbd><span class="sound">tink</span></div>
-		<div data-key="74" class="key"><kbd>J</kbd><span class="sound">clap</span></div>
-		<div data-key="75" class="key"><kbd>K</kbd><span class="sound">hihat</span></div>
-		<div data-key="76" class="key"><kbd>L</kbd><span class="sound">kick</span></div>
+		<div data-key="65" class="key"><kbd>A</kbd></div>
+		<div data-key="83" class="key"><kbd>S</kbd></div>
+		<div data-key="68" class="key"><kbd>D</kbd></div>
+		<div data-key="70" class="key"><kbd>F</kbd></div>
+		<div data-key="71" class="key"><kbd>G</kbd></div>
+		<div data-key="72" class="key"><kbd>H</kbd></div>
+		<div data-key="74" class="key"><kbd>J</kbd></div>
+		<div data-key="75" class="key"><kbd>K</kbd></div>
+		<div data-key="76" class="key"><kbd>L</kbd></div>
 
-		<div data-key="90" class="key"><kbd>Z</kbd><span class="sound">clap</span></div>
-		<div data-key="88" class="key"><kbd>X</kbd><span class="sound">tink</span></div>
-		<div data-key="67" class="key"><kbd>C</kbd><span class="sound">hihat</span></div>
-		<div data-key="86" class="key"><kbd>V</kbd><span class="sound">ride</span></div>
-		<div data-key="66" class="key"><kbd>B</kbd><span class="sound">boom</span></div>
-		<div data-key="78" class="key"><kbd>N</kbd><span class="sound">ride</span></div>
-		<div data-key="77" class="key"><kbd>M</kbd><span class="sound">openhat</span></div>
+		<div data-key="90" class="key"><kbd>Z</kbd></div>
+		<div data-key="88" class="key"><kbd>X</kbd></div>
+		<div data-key="67" class="key"><kbd>C</kbd></div>
+		<div data-key="86" class="key"><kbd>V</kbd></div>
+		<div data-key="66" class="key"><kbd>B</kbd></div>
+		<div data-key="78" class="key"><kbd>N</kbd></div>
+		<div data-key="77" class="key"><kbd>M</kbd></div>
 
-		<div data-key="32" class="key"><kbd>Space</kbd><span class="sound">space</span></div>
-		<div data-key="13" class="key"><kbd>Enter</kbd><span class="sound">enter</span></div>
-		<div data-key="16" class="key"><kbd>Shift</kbd><span class="sound">shift</span></div>
-		<div data-key="8" class="key"><kbd>Backspace</kbd><span class="sound">backspace</span></div>
-		<div data-key="9" class="key"><kbd>Tab</kbd><span class="sound">tab</span></div>
-		<div data-key="27" class="key"><kbd>Esc</kbd><span class="sound">esc</span></div>
+		<div data-key="32" class="key"><kbd>Space</kbd></div>
+		<div data-key="13" class="key"><kbd>Enter</kbd></div>
+		<div data-key="16" class="key"><kbd>Shift</kbd></div>
+		<div data-key="8" class="key"><kbd>Backspace</kbd></div>
+		<div data-key="9" class="key"><kbd>Tab</kbd></div>
+		<div data-key="27" class="key"><kbd>Esc</kbd></div>
 	</div>
 
 
