--- a/keyboardTest/index.html
+++ b/keyboardTest/index.html
@@ -9,7 +9,28 @@
 
 <body>
 
+	<!--! deve ser capaz de usar divs com grida par fazer linahs de colunas dde tamanhos diferentes assim tem todas as teclas -->
 	<div class="keys">
+
+
+	<!--! Precisa mudar codigos das teclas e dps separar -->
+		<div data-key="81" class="key"><kbd>`</kbd></div>
+		<div data-key="81" class="key"><kbd>1</kbd></div>
+		<div data-key="81" class="key"><kbd>2</kbd></div>
+		<div data-key="81" class="key"><kbd>3</kbd></div>
+		<div data-key="81" class="key"><kbd>4</kbd></div>
+		<div data-key="81" class="key"><kbd>5</kbd></div>
+		<div data-key="81" class="key"><kbd>6</kbd></div>
+		<div data-key="81" class="key"><kbd>7</kbd></div>
+		<div data-key="81" class="key"><kbd>8</kbd></div>
+		<div data-key="81" class="key"><kbd>9</kbd></div>
+		<div data-key="81" class="key"><kbd>0</kbd></div>
+		<div data-key="81" class="key"><kbd>-</kbd></div>
+		<div data-key="81" class="key"><kbd>+</kbd></div>
+		<div data-key="81" class="key"><kbd>BACKSPACE</kbd></div>
+
+
+		
 		<div data-key="81" class="key"><kbd>Q</kbd></div>
 		<div data-key="87" class="key"><kbd>W</kbd></div>
 		<div data-key="69" class="key"><kbd>E</kbd></div>
@@ -20,7 +41,11 @@
 		<div data-key="73" class="key"><kbd>I</kbd></div>
 		<div data-key="79" class="key"><kbd>O</kbd></div>
 		<div data-key="80" class="key"><kbd>P</kbd></div>
+		<div data-key="80" class="key"><kbd>[</kbd></div>
+		<div data-key="80" class="key"><kbd>]</kbd></div>
+		<div data-key="80" class="key"><kbd>\</kbd></div>
 
+		<div data-key="65" class="key"><kbd>CAPS</kbd></div>
 		<div data-key="65" class="key"><kbd>A</kbd></div>
 		<div data-key="83" class="key"><kbd>S</kbd></div>
 		<div data-key="68" class="key"><kbd>D</kbd></div>
@@ -30,7 +55,11 @@
 		<div data-key="74" class="key"><kbd>J</kbd></div>
 		<div data-key="75" class="key"><kbd>K</kbd></div>
 		<div data-key="76" class="key"><kbd>L</kbd></div>
+		<div data-key="76" class="key"><kbd>;</kbd></div>
+		<div data-key="76" class="key"><kbd>'</kbd></div>
+		<div data-key="76" class="key"><kbd>ENTER</kbd></div>
 
+		<div data-key="90" class="key"><kbd>SHIFT</kbd></div>
 		<div data-key="90" class="key"><kbd>Z</kbd></div>
 		<div data-key="88" class="key"><kbd>X</kbd></div>
 		<div data-key="67" class="key"><kbd>C</kbd></div>
@@ -38,13 +67,19 @@
 		<div data-key="66" class="key"><kbd>B</kbd></div>
 		<div data-key="78" class="key"><kbd>N</kbd></div>
 		<div data-key="77" class="key"><kbd>M</kbd></div>
+		<div data-key="77" class="key"><kbd>,</kbd></div>
+		<div data-key="77" class="key"><kbd>,</kbd></div>
+		<div data-key="77" class="key"><kbd>/</kbd></div>
+		<div data-key="77" class="key"><kbd>RSHIFT</kbd></div>
 
-		<div data-key="32" class="key"><kbd>Space</kbd></div>
-		<div data-key="13" class="key"><kbd>Enter</kbd></div>
-		<div data-key="16" class="key"><kbd>Shift</kbd></div>
-		<div data-key="8" class="key"><kbd>Backspace</kbd></div>
-		<div data-key="9" class="key"><kbd>Tab</kbd></div>
-		<div data-key="27" class="key"><kbd>Esc</kbd></div>
+		<div data-key="32" class="key"><kbd>CTRL</kbd></div>
+		<div data-key="32" class="key"><kbd>WIN</kbd></div>
+		<div data-key="32" class="key"><kbd>ALT</kbd></div>
+		<div data-key="13" class="key"><kbd>SPACE</kbd></div>
+		<div data-key="16" class="key"><kbd>RALT</kbd></div>
+		<div data-key="8" class="key"><kbd>FN</kbd></div>
+		<div data-key="9" class="key"><kbd>FN</kbd></div>
+		<div data-key="27" class="key"><kbd>RCTRL</kbd></div>
 	</div>
 
 
