correct format ok

--- a/keyboardTest/index.html
+++ b/keyboardTest/index.html
@@ -10,7 +10,7 @@
 <body>
 
 	<!--! deve ser capaz de usar divs com grida par fazer linahs de colunas dde tamanhos diferentes assim tem todas as teclas -->
-	<div class="keys">
+	<div class="keys1">
 
 		<!-- Linha 1 -->
 		<div data-key="192" class="key"><kbd>`</kbd></div>
@@ -28,6 +28,11 @@
 		<div data-key="187" class="key"><kbd>+</kbd></div>
 		<div data-key="8" class="key"><kbd>BACKSPACE</kbd></div>
 
+	</div>
+
+
+	<div class="keys2">
+
 		<!-- Linha 2 -->
 		<div data-key="81" class="key"><kbd>Q</kbd></div>
 		<div data-key="87" class="key"><kbd>W</kbd></div>
@@ -42,6 +47,9 @@
 		<div data-key="219" class="key"><kbd>[</kbd></div>
 		<div data-key="221" class="key"><kbd>]</kbd></div>
 		<div data-key="220" class="key"><kbd>\</kbd></div>
+	</div>
+
+	<div class="keys3">
 
 		<!-- Linha 3 -->
 		<div data-key="20" class="key"><kbd>CAPS</kbd></div>
@@ -57,6 +65,9 @@
 		<div data-key="186" class="key"><kbd>;</kbd></div>
 		<div data-key="222" class="key"><kbd>'</kbd></div>
 		<div data-key="13" class="key"><kbd>ENTER</kbd></div>
+	</div>
+
+	<div class="keys4">
 
 		<!-- Linha 4 -->
 		<div data-key="16" class="key"><kbd>SHIFT</kbd></div>
@@ -71,8 +82,10 @@
 		<div data-key="190" class="key"><kbd>.</kbd></div>
 		<div data-key="191" class="key"><kbd>/</kbd></div>
 		<div data-key="16" class="key"><kbd>RSHIFT</kbd></div>
+	</div>
+	<!-- Linha 5 -->
+	<div class="keys5">
 
-		<!-- Linha 5 -->
 		<div data-key="17" class="key"><kbd>CTRL</kbd></div>
 		<div data-key="91" class="key"><kbd>WIN</kbd></div>
 		<div data-key="18" class="key"><kbd>ALT</kbd></div>
