--- a/keyboardTest/index.html
+++ b/keyboardTest/index.html
@@ -24,8 +24,8 @@
 		<div data-key="56" class="key"><kbd>8</kbd></div>
 		<div data-key="57" class="key"><kbd>9</kbd></div>
 		<div data-key="48" class="key"><kbd>0</kbd></div>
-		<div data-key="189" class="key"><kbd>-</kbd></div>
-		<div data-key="187" class="key"><kbd>+</kbd></div>
+		<div data-key="173" class="key"><kbd>-</kbd></div>
+		<div data-key="61" class="key"><kbd>+</kbd></div>
 		<div data-key="8" class="key"><kbd>BACKSPACE</kbd></div>
 
 	</div>
@@ -34,6 +34,7 @@
 	<div class="keys2">
 
 		<!-- Linha 2 -->
+		<div data-key="9" class="key"><kbd>TAB</kbd></div>
 		<div data-key="81" class="key"><kbd>Q</kbd></div>
 		<div data-key="87" class="key"><kbd>W</kbd></div>
 		<div data-key="69" class="key"><kbd>E</kbd></div>
@@ -87,13 +88,13 @@
 	<div class="keys5">
 
 		<div data-key="17" class="key"><kbd>CTRL</kbd></div>
-		<div data-key="91" class="key"><kbd>WIN</kbd></div>
+		<div data-key="91" class="key"><kbd>NONE</kbd></div>
 		<div data-key="18" class="key"><kbd>ALT</kbd></div>
 		<div data-key="32" class="key"><kbd>SPACE</kbd></div>
-		<div data-key="18" class="key"><kbd>RALT</kbd></div>
-		<div data-key="112" class="key"><kbd>FN</kbd></div>
-		<div data-key="112" class="key"><kbd>FN</kbd></div>
-		<div data-key="17" class="key"><kbd>RCTRL</kbd></div>
+		<div data-key="18" class="key"><kbd>NONE</kbd></div>
+		<div data-key="0" class="key"><kbd>FN</kbd></div>
+		<div data-key="112" class="key"><kbd>NONE</kbd></div>
+		<div data-key="17" class="key"><kbd>NONE</kbd></div>
 	</div>
 
 
