add row, css improv

--- a/keyboardTest/index.html
+++ b/keyboardTest/index.html
@@ -9,6 +9,26 @@
 
 <body>
 
+	<div class="keys0">
+
+		<!-- Linha 1 -->
+		<div data-key="27" class="key"><kbd>ESQ</kbd></div>
+		<div data-key="112" class="key"><kbd>F1</kbd></div>
+		<div data-key="113" class="key"><kbd>F2</kbd></div>
+		<div data-key="114" class="key"><kbd>F3</kbd></div>
+		<div data-key="115" class="key"><kbd>F4</kbd></div>
+		<div data-key="116" class="key"><kbd>F5</kbd></div>
+		<div data-key="117" class="key"><kbd>F6</kbd></div>
+		<div data-key="118" class="key"><kbd>F7</kbd></div>
+		<div data-key="119" class="key"><kbd>F8</kbd></div>
+		<div data-key="120" class="key"><kbd>F9</kbd></div>
+		<div data-key="121" class="key"><kbd>F10</kbd></div>
+		<div data-key="123" class="key"><kbd>F11</kbd></div>
+		<div data-key="124" class="key"><kbd>F12</kbd></div>
+
+	</div>
+
+
 	<!--! deve ser capaz de usar divs com grida par fazer linahs de colunas dde tamanhos diferentes assim tem todas as teclas -->
 	<div class="keys1">
 
